# Backtesting-Framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
backtester/: __init__.py  dataio.py  engine.py  metrics.py  portfolio.py  strategy.py  utils.py
backtester/strategies/: ma_crossover.py  rsi.py
examples/: make_summary.py  parallel_optimization.py  simple_backtest.py  strategy_rsi_demo.py  threaded_data_load.py
tests/: test_dataio.py  test_engine.py  test_metrics.py  test_min_coverage.py  test_portfolio.py  test_strategy.py
