[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting-assignment"
version = "0.1.0"
description = "Take-home backtesting engine (MA crossover) with threading/multiprocessing demos"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Aayush Kumar"}]
dependencies = [
  "pandas>=1.3.0",
  "numpy>=1.20.0",
  "matplotlib>=3.3.0",
  "yfinance>=0.2.40",
  "pytest>=7",
  "pytest-cov>=4"
]

[tool.setuptools]
# use classic flat layout

[tool.setuptools.packages.find]
include = ["backtester*"]
exclude = ["tests*", "examples*", "data*", "results*"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100
